Закончил 2-ю часть задания, индексируется на всём что в конфиге кроме Ленты.Ру

--- a/application.yaml
+++ b/application.yaml
@@ -17,18 +17,27 @@ spring:
 # example values
 indexing-settings:
   sites:
-    - url: https://nopaper.ru
-      name: NoPaper.Ru
-      httpRequestDelay: 1000
-#    - url: https://www.lenta.ru
-#      name: Лента.ру
-#      httpRequestDelay: 500
-#    - url: https://www.skillbox.ru
-#      name: Skillbox
-#      httpRequestDelay: 500
 #    - url: https://www.playback.ru
 #      name: PlayBack.Ru
 #      httpRequestDelay: 500
+#    - url: https://volochek.life/
+#      name: Volochek.life
+#      httpRequestDelay: 500
+#    - url:  http://radiomv.ru/
+#      name: Radio.MV
+#      httpRequestDelay: 500
+#    - url: https://ipfran.ru/
+#      name: IPF.RAN
+#      httpRequestDelay: 500
+#    - url: https://nopaper.ru
+#      name: NoPaper.Ru
+#      httpRequestDelay: 500
+#    - url: https://www.skillbox.ru
+#      name: Skillbox
+#      httpRequestDelay: 300
+####    - url: https://www.lenta.ru
+####     name: Лента.ру
+####      httpRequestDelay: 3000
 
 # Jsoup Connection values
 connection-headers:
